[project]
name = "lightrag-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "minamik", email = "mia@sync.dev" }
]
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.12.0",
    "lightrag-hku[api]>=1.4.9",
    "litellm[proxy]>=1.77.5",
]

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"
